# fastapi-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.zed/: debug.json
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: users.py
app/core/: config.py  models.py  security.py
app/crud/: base.py  crud_user.py
app/db/: base.py  init_db.py  session.py
app/models/: user.py
app/schemas/: user.py
tests/: conftest.py  test_main.py
