[project]
name = "fastapi-starter-template"
version = "0.1.0"
description = "A professional FastAPI starter template with a scalable structure, Docker support, and best practices for modern API development and deployment."
readme = "README.md"
authors = [{ name = "Yeferson Toloza", email = "yefersontoloza59@gmail.com" }]
license = { file = "LICENSE" }
keywords = [
  "fastapi",
  "template",
  "starter",
  "sqlmodel",
  "docker",
  "api",
  "python",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.13"
dependencies = [
  "fastapi[all]>=0.115.12",
  "passlib[bcrypt]>=1.7.4",
  "python-dotenv>=1.1.0",
  "sqlmodel>=0.0.24",
  "bcrypt<4.0",
  "sqlalchemy-libsql>=0.2.0",
]

[dependency-groups]
dev = ["black>=24.0.0", "ruff>=0.3.0", "isort>=5.12.0", "pre-commit>=3.7.0"]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["alembic", ".venv", "tests"]
fix = true

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "C90",
  "N",
  "UP",
  "B",
  "A",
  "C4",
  "DTZ",
  "PIE",
  "PT",
  "RET",
  "SIM",
  "TID",
  "ARG",
  "PL",
  "RUF",
]
ignore = []
