[project]
name = "fastapi-starter-template"
version = "0.1.0"
description = "A professional FastAPI starter template with a scalable structure, Docker support, and best practices for modern API development and deployment."
readme = "README.md"
authors = [{ name = "Yeferson Toloza", email = "yefersontoloza59@gmail.com" }]
license = { file = "LICENSE" }
keywords = [
  "fastapi",
  "template",
  "starter",
  "sqlmodel",
  "docker",
  "api",
  "python",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=3.2.2",
    "fastapi[all]>=0.118.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.1.1",
    "sqlalchemy-libsql>=0.2.0",
    "sqlmodel>=0.0.25",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.1.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
    "zuban>=0.0.24",
]

[tool.black]
line-length = 88
target-version = ["py311", "py312", "py313"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["alembic", ".venv", "tests"]
fix = true

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "C90",
  "N",
  "UP",
  "B",
  "A",
  "C4",
  "DTZ",
  "PIE",
  "PT",
  "RET",
  "SIM",
  "TID",
  "ARG",
  "PL",
  "RUF",
]
ignore = []

[tool.zuban]
python_executable=".venv/bin/python"
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
